# git

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  speak
components/BSP/: CMakeLists.txt
components/BSP/IIS/: i2s.h
components/BSP/http_client/: http_client.c
components/BSP/tts/: tts.c  tts.h
components/BSP/wifi/: wifi_credentials.h  wifi_manager.c  wifi_manager.h
components/doubao_tts/: doubao_tts.h
main/: CMakeLists.txt  main.c  main_config.h
tts/: partitions.csv
tts/components/BSP/: CMakeLists.txt
tts/components/BSP/IIS/: i2s.c
tts/components/BSP/SPI/: spi.c  spi.h
tts/components/BSP/doubao_tts/: doubao_tts.c
tts/components/BSP/http_client/: http_client.h
tts/components/BSP/wifi/: wifi_credentials.h  wifi_manager.c
tts/components/Middldewares/: CMakeLists.txt
tts/components/Middldewares/laba/: laba.c  laba.h
tts/main/: CMakeLists.txt  idf_component.yml  main.c
tts1/: CMakeLists.txt  README.md
tts1/components/BSP/: CMakeLists.txt
tts1/components/BSP/IIS/: CMakeLists.txt  i2s.c  i2s.h  iis.c  iis.h
tts1/components/BSP/doubao_tts/: doubao_tts.c  doubao_tts.h  mp3_decoder.c  mp3_decoder.h
tts1/components/Middldewares/: CMakeLists.txt
tts1/components/Middlewares/: CMakeLists.txt
tts1/components/Middlewares/llm/: ai_bridge_common.c  ai_bridge_common.h  llm_client.c  llm_client.h  llm_config.h  llm_gateway_http.c  llm_gateway_http.h  llm_gateway_protocol.c  llm_gateway_protocol.h  llm_gateway_tts_ws.c  llm_gateway_tts_ws.h  llm_gateway_ws.c  llm_gateway_ws.h  tts_client.c  tts_client.h  volc_gateway_auth.c  volc_gateway_auth.h  volc_gateway_config .h  volc_gateway_config.h
tts1/components/Middlewares/mic/: mic_adc_pcm.c  mic_adc_pcm.h  mic_adc_test.c  mic_adc_test.h  mic_llm_bridge.c  mic_llm_bridge.h  mic_record_buffer.c  mic_record_buffer.h  mic_serial_output.c  mic_serial_output.h  mic_vad.c  mic_vad.h
tts1/components/Middlewares/screen/: ai_screen_bridge.c  ai_screen_bridge.h
tts1/components/Middlewares/sensors/: bme690_llm_bridge.c  bme690_llm_bridge.h  csi_llm_bridge.c  csi_llm_bridge.h
tts1/components/Middlewares/speaker/: CMakeLists.txt  speaker_llm_bridge.c  speaker_llm_bridge.h  speaker_player.c  speaker_player.h  speaker_resample.c  speaker_resample.h  speaker_task.c  speaker_task.h  speaker_test_pcm.c  speaker_test_pcm.h
tts1/components/Middlewares/system/: system_llm_bridge.c  system_llm_bridge.h
tts1/components/Middlewares/wifi/: wifi_credentials.h  wifi_manager.c  wifi_manager.h
tts1/components/app_config/: app_debug_config.h  app_main_config.h
tts1/components/audio/: CMakeLists.txt  resample.c  resample.h
tts1/components/audio_player/: CMakeLists.txt  audio_async_log.c  audio_async_log.h  audio_player.c  audio_player.h
tts1/components/doubao_tts/: CMakeLists.txt
tts1/main/: CMakeLists.txt  audio_task.c  audio_task.h  main.c  main_config.h  pcm_data.c  pcm_data.h
